2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/mutex01.c, psxhdrs/mutex02.c, psxhdrs/mutex03.c,
	psxhdrs/mutex04.c, psxhdrs/mutex05.c, psxhdrs/mutex06.c,
	psxhdrs/mutex07.c, psxhdrs/mutex08.c, psxhdrs/mutex09.c,
	psxhdrs/mutex10.c, psxhdrs/mutex11.c, psxhdrs/mutex12.c,
	psxhdrs/mutex13.c, psxhdrs/mutex14.c, psxhdrs/mutex15.c,
	psxhdrs/mutex16.c: Let test() return values (avoid warnings).

2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/proc01.c, psxhdrs/proc02.c, psxhdrs/proc03.c,
	psxhdrs/proc04.c, psxhdrs/proc05.c, psxhdrs/proc06.c,
	psxhdrs/proc07.c, psxhdrs/proc08.c, psxhdrs/proc09.c,
	psxhdrs/proc10.c, psxhdrs/proc11.c, psxhdrs/proc12.c,
	psxhdrs/proc13.c, psxhdrs/proc14.c:
	Let test() return values (avoid warnings).

2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/sched01.c, psxhdrs/sched02.c, psxhdrs/sched03.c,
	psxhdrs/sched04.c, psxhdrs/sched05.c, psxhdrs/sched06.c,
	psxhdrs/sched07.c, psxhdrs/sched08.c:
	Let test() return values (avoid warnings).

2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/signal01.c, psxhdrs/signal02.c, psxhdrs/signal03.c,
	psxhdrs/signal04.c, psxhdrs/signal05.c, psxhdrs/signal06.c,
	psxhdrs/signal07.c, psxhdrs/signal08.c, psxhdrs/signal09.c,
	psxhdrs/signal10.c, psxhdrs/signal11.c, psxhdrs/signal12.c,
	psxhdrs/signal13.c, psxhdrs/signal14.c, psxhdrs/signal15.c,
	psxhdrs/signal16.c, psxhdrs/signal17.c, psxhdrs/signal18.c,
	psxhdrs/signal19.c, psxhdrs/signal20.c, psxhdrs/signal21.c,
	psxhdrs/signal22.c, psxhdrs/signal23.c:
	Let test() return values (avoid warnings).

2011-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/key01.c, psxhdrs/key02.c, psxhdrs/key03.c,
	psxhdrs/key04.c: Let test() return values (avoid warnings).
	* psxhdrs/clock01.c, psxhdrs/clock02.c, psxhdrs/clock03.c,
	psxhdrs/clock04.c, psxhdrs/clock05.c, psxhdrs/clock06.c:
	Let test() return values (avoid warnings).

2011-10-13	Ralf Corsépius <ralf.corsepius@rtems.org>
