@@ -22,12 +22,14 @@
 #error "rtems is supposed to have pthread_cond_signal"
 #endif
 
-void test( void );
+int test( void );
 
-void test( void )
+int test( void )
 {
   pthread_cond_t cond = PTHREAD_COND_INITIALIZER;
   int result;
 
   result = pthread_cond_signal( &cond );
+
+  return result;
 }
