@@ -22,9 +22,9 @@
 #error "rtems is supposed to have pthread_cond_timedwait"
 #endif
 
-void test( void );
+int test( void );
 
-void test( void )
+int test( void )
 {
   pthread_cond_t  cond  = PTHREAD_COND_INITIALIZER;
   pthread_mutex_t mutex = PTHREAD_MUTEX_INITIALIZER;
@@ -32,4 +32,6 @@ void test( void )
   int result;
 
   result = pthread_cond_timedwait( &cond, &mutex, &abstime );
+
+  return result;
 }
